--- a/app/scss/_sections.scss
+++ b/app/scss/_sections.scss
@@ -2,5 +2,6 @@
   text-align: center;
   h2 {
     color: rgb(56,0,250);
+    margin-top: 40px;
   }
 }
